--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,12 @@
 body {
+  font-family: 'Courier New', Courier, monospace;
   margin: 0 auto;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
-  /* max-width: 375px; */
+  max-width: 748px;
+}
+
+* {
+  margin: 0;
+  padding: 0;
 }
