--- a/src/components/pages/ListeningLesson/ListeningLesson.module.css
+++ b/src/components/pages/ListeningLesson/ListeningLesson.module.css
@@ -1,3 +1,7 @@
+.dialog {
+  padding: 20px;
+}
+
 .chatContainer {
   width: 400px;
   height: 500px;
@@ -31,7 +35,7 @@
   flex-direction: column;
   margin-top: auto;
   width: 100%;
-  height: calc(100vh - 154px);
+  height: calc(100vh - 273px);
   overflow: auto;
 }
 
@@ -41,6 +45,10 @@
 
 .audio {
   width: 100%;
+}
+
+.blur {
+  filter: blur(8px);
 }
 
 @keyframes slide-up {
